Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0, 5.6.0 Alpha
-
Windows 8.1 Pro, Visual Studio 2013 Ultimate (Update 4), Qt 5.6, Qt Creator 3.4.2
-
-
916cfed 00a341d, 9ff74f14876dea3a21c1dab389577c54e3bf1bc5
Description
When rotating the a device (screen rotation enabled in the global Windows Phone settings) then the Qml interface rotates exactly one time correctly. Successive rotations lead to a distorted screen.
Steps to reproduce:
1.) Start app with phone in portrait mode
2.) Rotate phone -> Qml screen rotates fine.
3.) Rotate back to portrait -> distorted.
4.) Rotate to landscape -> sometimes ok again, often distorted.
5.) Portrait -> distorted, etc.
Qml:
ApplicationWindow {
title: qsTr("Hello World")
width: 640
height: 480
visible: true
Rectangle
{ anchors.fill: parent color:"yellow" }}
C++:
QApplication app(argc, argv);
QQmlApplicationEngine engine;
engine.load(QUrl(QStringLiteral("qrc:/main.qml")));
Attachments
Issue Links
- is duplicated by
-
QTBUG-46185 QtQuick applications doesn't respect fixed landscape orientation
-
- Closed
-
- relates to
-
QTBUG-43502 WP: cannot change orientation of content when user explicit declare landscape in AppxManifest.xml
-
- Closed
-
For Gerrit Dashboard: QTBUG-44333 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111628,4 | ANGLE: Allow Windows Phone to communicate swap region | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
111629,4 | winrt: Use ANGLE sub-buffer swap on Windows Phone | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |